--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
           document.documentElement.classList.toggle('dark', true)
       })()
     </script>
+    <script src="https://unpkg.com/vconsole/dist/vconsole.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-vconsole-devtools@1.0.5/dist/vue_plugin.js"></script>
+    <script>
+      var vConsole = new window.VConsole();
+      const Devtools = window.vueVconsoleDevtools
+      Devtools.initPlugin(vConsole);
+    </script>
   </head>
   <body>
     <div id="app"></div>
